--- a/styles/startPage.css
+++ b/styles/startPage.css
@@ -9,7 +9,7 @@ html {
     min-height: 100%;
 }
 body {
-    background-image: url("images/bgm.svg");
+    background-image: url("BLACK_I_desktop-1.svg");
 }
 #links {
     margin-top: 5%;
