--- a/styles/startPage.css
+++ b/styles/startPage.css
@@ -9,7 +9,10 @@ html {
     min-height: 100%;
 }
 body {
-    background-image: url("background.svg");
+    background-image: url("background.svg")  no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
 }
 #links {
     margin-top: 5%;
