--- a/styles/startPage.css
+++ b/styles/startPage.css
@@ -1,6 +1,5 @@
 @font-face {
-    font-family: FiraCode-regular;
-    src: url(fonts/FiraCode-Regular.ttf) format("truetype");
+    font-family: "Lucida Console";
 }
 body,
 html {
