--- a/styles/startPage.css
+++ b/styles/startPage.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: "Lucida Console";
+    font-family: Monaco;
 }
 body,
 html {
@@ -34,7 +34,6 @@ a {
 #clock,#weekday,#date,#search-bar{
     color: rgba(220,220,220,0.5);
     margin: 0;
-    font-family: "Lucida Console";
 }
 
 #clock {
